[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/battles/CurrentPlayerPanel.gd" type="Script" id=1]
[ext_resource path="res://assets/images/sheets/sprites.png" type="Texture" id=2]
[ext_resource path="res://assets/images/icons/quick_icon.png" type="Texture" id=3]
[ext_resource path="res://assets/images/icons/ap_gauge.png" type="Texture" id=4]
[ext_resource path="res://assets/images/icons/sp_empty.png" type="Texture" id=5]
[ext_resource path="res://assets/images/icons/bp_empty.png" type="Texture" id=6]
[ext_resource path="res://assets/images/icons/bp_full.png" type="Texture" id=7]
[ext_resource path="res://assets/images/icons/ap_bg.png" type="Texture" id=8]
[ext_resource path="res://assets/images/icons/sp_full.png" type="Texture" id=9]

[node name="CurrentPlayer" type="Control"]
margin_right = 72.0
margin_bottom = 9.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="Sprite" parent="."]
position = Vector2( -1, 1 )
texture = ExtResource( 2 )
centered = false
hframes = 10
vframes = 20
frame = 23

[node name="Name" type="RichTextLabel" parent="."]
margin_left = 8.0
margin_right = 43.0
margin_bottom = 7.0
text = "Cassandra"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuickIcon" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -3.5
margin_bottom = 1.5
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resources" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -27.0
margin_top = -4.5
margin_right = -7.0
margin_bottom = 2.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sorcery" type="Control" parent="Resources"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SpMax" type="TextureRect" parent="Resources/Sorcery"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -2.5
margin_right = 1.0
margin_bottom = 2.5
texture = ExtResource( 5 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpCur" type="TextureRect" parent="Resources/Sorcery"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -2.5
margin_right = 1.0
margin_bottom = 2.5
texture = ExtResource( 9 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Perform" type="Control" parent="Resources"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BpMax" type="TextureRect" parent="Resources/Perform"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -7.0
margin_top = -2.5
margin_right = 1.0
margin_bottom = 2.5
texture = ExtResource( 6 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BpCur" type="TextureRect" parent="Resources/Perform"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -2.0
margin_top = -2.5
margin_right = 1.0
margin_bottom = 2.5
texture = ExtResource( 7 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApGauge" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -2.0
margin_right = 1.0
margin_bottom = -1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApBg" type="TextureRect" parent="ApGauge"]
show_behind_parent = true
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -0.5
margin_right = 70.0
margin_bottom = 0.5
texture = ExtResource( 8 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}
